fix: scrollbar remains black in dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+.dark * {
+  color-scheme: dark;
+}
+
 html,
 body,
 #app {
